# TinyRender

./: .gitignore  CMakeLists.txt  README.md  geometry.cpp  geometry.h  main.cpp  model.cpp  model.h  premake5.lua  shaders.h
images/: flatShader.tga  gouraudShader.tga  output.tga  output_CameraRotation.tga  output_project.tga
src/: GLCalculate.cpp  GLCalculate.h  main.cpp  shader.cpp  shader.h
